<resources>
    <string name="app_name" translatable="false">Practicum Project</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="app_title">Playlist maker</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">Смотри курс по Android-разработке в Практикуме: %s</string>
    <string name="practice_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">danil.vahru1@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_cover">Обложка трека</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="connection_error_title">Проблемы со связью</string>
    <string name="connection_error_subtitle">\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_retry">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="back">Back</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="play">Play</string>
    <string name="duration_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
</resources>
