<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            style="@style/MainButtonStyle"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/search"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_media"
            style="@style/MainButtonStyle"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/media"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings"
            style="@style/MainButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart" />


    </LinearLayout>
</LinearLayout>
